Fix Microphone sensor Board
NOTE: Layout still needs to be replicated

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Replicate layout logs
+replicate_layout.log
+
 # Source: https://github.com/github/gitignore/blob/master/KiCad.gitignore
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
